--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- nav bar start -->
-        <nav class="navbar navbar-expand-xl  container px-3 align-items-center" aria-label="Offcanvas navbar large">
+        <nav class="navbar navbar-expand-xl sticky-top container px-3 align-items-center" aria-label="Offcanvas navbar large">
             <a class="navLogo d-flex align-items-center" href="javascript:;"><img src="assets/img/navbar/logo.svg" alt="logo" class="img-fluid w-100 h-100"></a>
             <button class="navbar-toggler d-xl-none d-flex align-items-center border-0 shadow-none "  type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
                 <span class="menuIcon d-inline-flex align-items-center"> 
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="text">
+                        <div class="text text-center text-sm-start">
                             <span class="lines  body_text_small">
                                 OVER ASK TOP CLASS BRIKING WITH EXSTUDIO
                             </span>
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid logoSection mb-4">
+        <div class="container-fluid logoSection">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-4 col-md-3 col-lg-2">
@@ -288,7 +288,7 @@
                             <div class="body_heading_small">
                                 About Company
                             </div>
-                            <div class="body_heading pt-3 pt-xl-4">
+                            <div class="body_heading pt-0 pt-sm-3 pt-xl-4">
                                 Transforming Businesses With Innovative Digital Solutions.
                             </div>
                             <div class="body_text_small pt-4 pe-4">
@@ -413,7 +413,7 @@
                             <div class="body_heading_small">
                                 Services
                             </div>
-                            <div class="body_heading pt-3 pt-xl-4">
+                            <div class="body_heading pt-0 pt-sm-3 pt-xl-4">
                                 We Can Help You Solve Your Problem Through Our Service.
                             </div>
                             <div class="body_text_small pt-4 pe-4">
@@ -765,13 +765,13 @@
                                     <div class="inputbutton pt-2 pt-sm-4">
                                         <div class="input-group mb-3 bg-white p-1 border-0 shadow-none rounded-3">
                                             <input type="email" class="form-control border-0 shadow-none fw-bold text-black" placeholder="Email Address" aria-label="Email Address" aria-describedby="button-addon2">
-                                            <button class="btn btn-outline-secondary text-white bg-black border-0 shadow-none rounded-3" type="button" id="button-addon2">Subscribe</button>
+                                            <button class="btn btn-outline-secondary text-white bg-black border-0 shadow-none rounded-3 subsBtn" type="button" id="button-addon2">Subscribe</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="body_text_small pt-2 pt-ms-4 text-white member">
-                                Alerady a Member? <span class="spanYellow">Sign In</span>
+                                Alerady a Member? <span > <a href="javascript:;" class="spanYellow text-decoration-none">Sign In</a></span>
                             </div>
                         </div>
                     </div>
@@ -795,6 +795,144 @@
             </div>
         </div>
     <!-- subscribe section Ends -->
+
+    <!-- footer start -->
+        <div class="container-fluid section_spacing footerSection">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="MainSide">
+                            <div class="footerLogo">
+                                <img src="./assets/img/logoWhite.svg" alt="footerLogo" class="h-100 w-100 img-fluid">
+                            </div>
+                            <div class="footertxt body_text_large">
+                                Some studies indicate that consumer responses to marketing approaches are becoming
+                            </div>
+                            <div class="socialLinks">
+                                <ul class="list-unstyled socialUl">
+                                    <li>
+                                        <a href="javascript:;" class="text-decoration-none socialAnc">
+                                            <div class="socialImg faceBook">
+                                                <img src="./assets/img/facebookW.svg" alt="faceLogo" class="h-100 w-100 img-fluid">
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:;" class="text-decoration-none socialAnc">
+                                            <div class="socialImg instagram">
+                                                <img src="./assets/img/insta.svg" alt="faceLogo" class="h-100 w-100 img-fluid">
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:;" class="text-decoration-none socialAnc">
+                                            <div class="socialImg linkedIn">
+                                                <img src="./assets/img/linkedw.svg" alt="faceLogo" class="h-100 w-100 img-fluid">
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:;" class="text-decoration-none socialAnc">
+                                            <div class="socialImg twitter">
+                                                <img src="./assets/img/twitterW.svg" alt="faceLogo" class="h-100 w-100 img-fluid">
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-2">
+                        <div class="secondLine">
+                            <div class="MianHead body_text_large">
+                                Product
+                            </div>
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Features
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Intergrations
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Pricing
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Changelog
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-2">
+                        <div class="secondLine">
+                            <div class="MianHead body_text_large">
+                                Company
+                            </div>
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        About Us
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Blog
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        carrers
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Consumers
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="secondLine">
+                            <div class="MianHead body_text_large">
+                                Quick Contact
+                            </div>
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        +9923154250
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        info.dagen.com
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Contact Us
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
+                                        Terms Of Service
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- footer Ends -->
 
 
 
@@ -935,17 +1073,14 @@
         768: {
             slidesPerView: 3,
             spaceBetween: 10,
-            // centeredSlides:false,
         },
         992: {
             slidesPerView: 2,
             spaceBetween: 20,
-            // centeredSlides: true,
         },
         1200: {
             slidesPerView: 3,
             spaceBetween: 20,
-            // centeredSlides: true,
         },
     },
     });
