--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <div class="body_heading_small">
                                 About Company
                             </div>
-                            <div class="body_heading pt-0 pt-sm-3 pt-xl-4">
+                            <div class="body_heading pt-1 pt-sm-3 pt-xl-4">
                                 Transforming Businesses With Innovative Digital Solutions.
                             </div>
                             <div class="body_text_small pt-4 pe-4">
@@ -413,7 +413,7 @@
                             <div class="body_heading_small">
                                 Services
                             </div>
-                            <div class="body_heading pt-0 pt-sm-3 pt-xl-4">
+                            <div class="body_heading pt-1 pt-sm-3 pt-xl-4">
                                 We Can Help You Solve Your Problem Through Our Service.
                             </div>
                             <div class="body_text_small pt-4 pe-4">
@@ -549,10 +549,10 @@
                         <div class="body_heading_small">
                             Testimonials
                         </div>
-                        <div class="body_heading pt-0 pt-sm-3 pt-xl-4">
+                        <div class="body_heading pt-1 pt-sm-3 pt-xl-4">
                             2500+ Happy Clients Said To Us They Are Satisfied
                         </div>
-                        <div class="body_text_small pt-2 pt-ms-4 pe-4">
+                        <div class="body_text_small pt-2 pt-sm-4 pe-4">
                             Some studies indicate that consumer responses to marketing approaches are becoming less predictable
                         </div>
                     </div>
@@ -847,7 +847,7 @@
                             <div class="MianHead body_text_large">
                                 Product
                             </div>
-                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-2 gap-sm-3">
                                 <li>
                                     <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
                                         Features
@@ -876,7 +876,7 @@
                             <div class="MianHead body_text_large">
                                 Company
                             </div>
-                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-2 gap-sm-3">
                                 <li>
                                     <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
                                         About Us
@@ -905,7 +905,7 @@
                             <div class="MianHead body_text_large">
                                 Quick Contact
                             </div>
-                            <ul class="secondLinks list-unstyled d-flex flex-column gap-3">
+                            <ul class="secondLinks list-unstyled d-flex flex-column gap-2 gap-sm-3">
                                 <li>
                                     <a href="javascript:;" class="secondAnc text-decoration-none body_text_large">
                                         +9923154250
@@ -1064,6 +1064,10 @@
         pagination: {
         el: ".swiper-pagination",
         clickable: true,
+        },
+        autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
         },
         breakpoints: {
         576: {
